--- a/index.html
+++ b/index.html
@@ -3,13 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
- <h1>HAMZA ILYAS</h1>
- 
+    <h1 style="text-align: center"
+    > <u><b>HAMZA ILYAS</b></u> </h1>
+    <img style="width: 12%"  src="c:\Users\DELL\Desktop\hamzaaaa.jpeg " alt="">
+    <h3><u>PERSONAL INFORMATION</u> </h3>
+    <uL>
+        <li>Name: Hamza</li>
+        <li>Father name: Muhammad ilyas</li>
+        <li>Religion: Islam</li>
+        <li>Nationality: Pakistani</li>
+        <li>CNIC: 42101-000000</li>
+        
+    </uL>
+    <h3><u>CONTACT</u> </h3>
+    <ul>
+        <li>Phone No: 033362630033</li>
+        <li>Email: abc@gmail.com</li>
+        <li>Adress: abc</li>
+
+    </ul>
+    <h3><u>EDUCATION</u> </h3>
+    <ul>
+        <li>Martric: 2019 karachi board </li>
+        <li>Intermediate: 2021 karachi board </li>
+
+    </Ul>
+    <h3><u>TECHNICAL QUALIFICATION</u> </h3>
+    <ul>
+        <li>Basic information: About Seo AND DIGIAL marketing</li>
+
+    </ul>
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
