--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <h1 style="text-align: center"
     > <u><b>HAMZA ILYAS</b></u> </h1>
-    <img style="width: 12%"  src="c:\Users\DELL\Desktop\hamzaaaa.jpeg " alt="">
+    <img style="width: 12%"  src=" c:\Users\DELL\Desktop\ggggggggggggggggggggggg.jpeg" alt="">
+    <!--
+        ./logo.png
+        https://hamzaaaailyas59.github.io/b9-web-dev/logo.png
+        
+    -->
+
     <h3><u>PERSONAL INFORMATION</u> </h3>
     <uL>
         <li>Name: Hamza</li>
